--- a/DAL/App.Config
+++ b/DAL/App.Config
@@ -2,7 +2,7 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=miToken" requirePermission="false" />
   </configSections>
   <connectionStrings>
     <add name="eCommerceEntities" connectionString="metadata=res://*/eCommerceDBModel.csdl|res://*/eCommerceDBModel.ssdl|res://*/eCommerceDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=eCommerce;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
